<resources>
    <string name="app_name">Dss Club</string>


    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number_phone">Nhập số điện thoại</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="login">"Đăng nhập</string>
    <string name="remember_me">Ghi nhớ tôi!</string>
    <string name="forgot_password"><u>Quên mật khẩu?</u></string>
    <string name="forgot_password_title">Quên mật khẩu</string>
    <string name="do_not_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="register"><u>Đăng kí</u></string>
    <string name="btn_register">Đăng kí</string>
    <string name="enter_name">Nhập họ và tên</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_agency">Nhập tên đại lý</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="enter_birth_day">Chọn ngày sinh</string>
    <string name="register_acc">Đăng kí tài khoản</string>
    <string name="get_password">Lấy mật khẩu</string>
    <string name="enter_code_otp">Nhập mã OTP</string>
    <string name="enter_new_password">Nhập mât khẩu mới</string>
    <string name="enter_old_password">Nhập mật khẩu cũ</string>
    <string name="Please">Xin chờ...!</string>
    <string name="net_work_off">Mạng ngoại tuyến</string>
    <string name="on_net_work">Bạn cần bật mạng</string>
    <string name="not_empty">Không được để trống!</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="false_account">Sai thông tin tài khoản</string>
    <string name="register_failed">Đăng kí tài khoản không thành công!</string>
    <string name="send_otp">Gửi mã OTP</string>
    <string name="success">Thành công!</string>
    <string name="get_pass_fail">Lấy mật khẩu không thành công!</string>
    <string name="oke">Đồng ý</string>
    <string name="send_otp_fail">Gửi mã OTP không thành công!</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="enter_pass">Nhập mật khẩu</string>
    <string name="number_phone_use_acc">Số điện thoại dùng làm tài khoản(<font color='red'><font color='red'>*</font></font>):</string>
    <string name="firt_name">Họ và tên đầy đủ(<font color='red'>*</font>):</string>
    <string name="angency_name">Tên đại lý(<font color='red'>*</font>):</string>
    <string name="email_name">Địa chỉ email dùng để đăng kí tài khoản(<font color='red'>*</font>):</string>
    <string name="address_name">Nhập địa chỉ hiện tại:</string>
    <string name="birth_day_name">Ngày sinh của bạn:</string>
    <string name="password_name">Nhập mật khẩu(<font color='red'>*</font>):</string>
    <string name="confirm_password_name">Xác nhận mật khẩu(<font color='red'>*</font>):</string>
    <string name="note">Chú ý: Thông tin dấu(<font color='red'>*</font>) là bắt buộc</string>
    <string name="enter_password_confirm">Nhập lại mật khẩu</string>
    <string name="number_phone_fail">Sai số điện thoại</string>
    <string name="title_forgot_pass">Vui lòng nhập số điện thoại của bạn và chúng tôi sẽ gửi bạn mật khẩu khôi phục</string>
    <string name="change_password_title">Đổi mật khẩu</string>
    <string name="note_change_pass">Vui lòng nhập đầy đủ thông tin để có thể đổi mật khẩu</string>
    <string name="note_edit_acc">Vui lòng nhập đầy đủ thông tin vào bên dưới để có thể sửa đổi thông tin</string>
    <string name="send_otp_title">Xác nhận mã OTP</string>
    <string name="title_forgot_otp">Chưa nhận được mã OTP?<u> Nhấn vào đây để gửi lại mã OTP</u></string>
    <string name="confirm_pass_fail">Xác nhận mật khẩu không khớp!</string>
    <string name="send_otp_success">Hệ thống đã gửi mã OTP vào số điện thoại %s!</string>
    <string name="confirm_otp_success">Xác nhận mã OTP thành công!</string>

    <string name="preview_height">preview.height</string>
    <string name="preview_width">preview.width</string>
    <string name="please_confirm_otp">Vui lòng kiểm tra số điện thoại %s. Bạn đã nhận được mã xác thực từ chúng tôi!</string>
    <string name="reward">Đổi thưởng</string>
    <string name="scan">Quét</string>
    <string name="history">Lịch sử</string>
    <string name="win">Quay thưởng</string>
    <string name="account">Tài khoản</string>
    <string name="info_acc">Thông tin tài khoản</string>
    <string name="info">Thông tin</string>
    <string name="agency">Tên đại lý</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="birthday">Ngày sinh</string>
    <string name="setting">Cài đặt</string>
    <string name="edit_acc">Sửa thông tin</string>
    <string name="firt_name_acc">Họ và tên</string>
    <string name="name_angency_acc">Tên đại lý</string>
    <string name="content_logout">Bạn có chắc chắn muốn đăng xuất không?   </string>
    <string name="log_out">Đăng xuất</string>
    <string name="yes">Đồng ý</string>
    <string name="dowload_data_fail">Tải dữ liệu không thành công!</string>
    <string name="txt_history_reward">Lịch sử đổi quà</string>
    <string name="txt_history_register_seri">Đăng kí seri</string>
    <string name="scores"> điểm</string>
    <string name="password_old">Nhập mật khẩu cũ(<font color='red'>*</font>):</string>
    <string name="enter_confirm_pass">Nhập lại mật khẩu mới</string>
    <string name="pass_new_fail">Mật khẩu cũ không đúng!</string>
    <string name="change_pass_success">Đổi mật khẩu thành công!</string>
    <string name="change_pass_fail">Đổi mật khẩu không thành công!</string>
    <string name="edit_Acc_success">Sửa thông tin thành công!</string>
    <string name="edit_Acc_fail">Sủa thông tin không thành công!</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="enter_seri">Nhập serial</string>
    <string name="register_seri">Đăng kí serial</string>
    <string name="code_seria">Mã serial</string>
    <string name="register_seria_success">Đăng kí serial thành công!</string>
    <string name="register_seria_fail">Đăng kí serial không thành công!</string>
    <string name="detail_register">Chi tiết thông tin đăng kí serial</string>
    <string name="code_product">Mã hàng hóa:</string>
    <string name="number_seria">Số seri:</string>
    <string name="code_reward">Mã số dự thưởng:</string>
    <string name="date_register_seria">Ngày đăng kí:</string>
    <string name="sores">Số điêm:</string>
    <string name="filter_history">Chọn thời gian lịch sử</string>
    <string name="btn_filter">Lọc danh sách</string>
    <string name="enter_start_day">Ngày bắt đầu</string>
    <string name="enter_end_day">Ngày kết thúc</string>
    <string name="start_day">Từ ngày:</string>
    <string name="end_day">Đến ngày:</string>
    <string name="txt_detail">Chi tiết</string>
    <string name="name_product">Tên hàng hóa:</string>
    <string name="load_camera">Đang tải camera</string>
    <string name="no_active">Bạn chưa có hoạt động nào</string>
    <string name="title_list_gift">Danh sách quà</string>
    <string name="load_image">Đang tải ảnh</string>
    <string name="name_product_item">Tên sản phẩm</string>
    <string name="reward_success">Đổi quà thành công. Quà tặng sẽ được gửi về địa chỉ tài khoản đăng ký!</string>
    <string name="reward_fail">Đổi quà không thành công!</string>
    <string name="confirm_reward">Xác nhận đổi quà</string>
    <string name="how_to_reward">Bạn có chắc chắn muốn đổi quà này!</string>
    <string name="how_to_reward_more">Bạn có chắc chắn muốn đổi quà này</string>
    <string name="reward_gift">Đổi quà</string>
    <string name="confirm">Xác nhận</string>
    <string name="title_info_gift">Thông tin quà tặng</string>
    <string name="info_gift">Mô tả</string>
    <string name="cancel">Thoát</string>
    <string name="name_gift">Tên quà tặng:</string>
    <string name="code_gift">Mã quà tặng:</string>
    <string name="txt_status">Tình trạng:</string>
    <string name="add">Thêm</string>
    <string name="san_continue">Quét tiếp</string>
    <string name="list_seria_register">Danh sách serial</string>
    <string name="enter_code_seria">Nhập mã serial</string>
    <string name="delete_success">Xóa thành công!</string>
    <string name="success_infor_regiter_seria">Thành công!</string>
    <string name="list_infor_regiter_seria">Thông tin đăng kí serial</string>
    <string name="error_infor_regiter_seria">Lỗi mã serial</string>
    <string name="register_infor_detail">Thông tin chi tiết</string>
    <string name="win_now">Hệ thống không có chương trình quét mã trúng thưởng trong thời gian hiện tại</string>
    <string name="win_reward">Chương trình quét mã trúng thưởng</string>
    <string name="your_win_success">Bạn đã trúng</string>
    <string name="title_activity_winfail">WinfailActivity</string>
    <string name="title_notification">Thông báo</string>
    <string name="qr_code">QRcode</string>
    <string name="retry">Retry</string>

    <string name="need_per">Need Permissions</string>
    <string name="this_app_needs_per">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="goto_setting">GOTO SETTINGS</string>
    <string name="offline">Mạng ngoại tuyến. Bạn cần bật mạng để sử dụng ứng dụng.</string>
    <string name="info_register">Quý khách vui lòng điền chính xác và đầy đủ thông tin cá nhân. Quà tặng hoặc các vật phẩm đổi sẽ được gửi về theo địa chỉ quý khách đã đăng ký.</string>
    <string name="number_gift">Số lượng đổi</string>
    <string name="see_detail">Xem chi tiết</string>
    <string name="enter_quantity_gift">Nhập số lượng quà cần đổi!</string>
    <string name="quantity_gift">Số lượng:</string>

</resources>
