<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_50"
        android:background="@drawable/bg_color">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_padding_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:src="@drawable/ic_back" />

        <com.example.admin.dss_project.custom.view.MyCusttomtext
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_acc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_padding_25"
            android:paddingRight="@dimen/margin_padding_25">

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_phone_use_acc" />

            <EditText
                android:id="@+id/txt_number_phone"
                style="@style/enter_edittext"
                android:layout_width="match_parent"
                android:hint="@string/enter_number_phone"
                android:inputType="number" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firt_name" />

            <EditText
                android:id="@+id/txt_name"
                style="@style/enter_edittext"
                android:hint="@string/enter_name" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_name" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/enter_edittext"
                android:hint="@string/enter_email" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angency_name" />

            <EditText
                android:id="@+id/txt_agency"
                style="@style/enter_edittext"
                android:hint="@string/enter_agency" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_name" />

            <EditText
                android:id="@+id/txt_address"
                style="@style/enter_edittext"
                android:hint="@string/enter_address" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_day_name" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                android:id="@+id/txt_birthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_50"
                android:layout_marginTop="@dimen/small"
                android:background="@drawable/stroke"
                android:gravity="center_vertical"
                android:hint="@string/enter_birth_day"
                android:padding="@dimen/small"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/font_size_standard"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_address" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_name" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/enter_edittext"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_name" />

            <EditText
                android:id="@+id/txt_password_confirm"
                style="@style/enter_edittext"
                android:hint="@string/enter_password_confirm"
                android:inputType="textPassword" />

            <com.example.admin.dss_project.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note" />

            <RelativeLayout
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_50"
                android:layout_below="@+id/view_center"
                android:layout_marginLeft="@dimen/margin_padding_35"
                android:layout_marginRight="@dimen/margin_padding_35"
                android:layout_marginTop="@dimen/margin_padding_30"
                android:layout_marginBottom="@dimen/margin_padding_30"
                android:background="@drawable/btn_login">

                <com.example.admin.dss_project.custom.view.MyCusttomtext
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>