<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/menu_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_50"
        android:background="@drawable/bg_color">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_padding_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:src="@drawable/ic_back" />

        <com.example.admin.club.custom.view.MyCusttomtext
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_acc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_padding_25"
            android:layout_marginLeft="@dimen/margin_padding_25">

            <com.example.admin.club.custom.view.MyCusttomtext
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_regis"
                android:text="@string/note_edit_acc"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_padding_25"
                android:textStyle="italic"/>

            <com.example.admin.club.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firt_name_acc" />

            <EditText
                android:id="@+id/txt_name"
                style="@style/enter_edittext"
                android:hint="@string/enter_name" />

            <com.example.admin.club.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_angency_acc" />

            <EditText
                android:id="@+id/txt_name_agency"
                style="@style/enter_edittext"
                android:hint="@string/enter_agency" />

            <com.example.admin.club.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/enter_edittext"
                android:hint="@string/enter_email" />

            <com.example.admin.club.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/txt_address"
                style="@style/enter_edittext"
                android:hint="@string/enter_address" />

            <com.example.admin.club.custom.view.MyCusttomtext
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_day_name" />

            <EditText
                android:id="@+id/txt_birthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_50"
                android:layout_marginTop="@dimen/small"
                android:background="@drawable/stroke"
                android:gravity="center_vertical"
                android:hint="dd/MM/yyyy"
                android:padding="@dimen/small"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/font_size_standard" />

            <RelativeLayout
                android:id="@+id/btn_save_edit_acc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_50"
                android:layout_marginLeft="@dimen/margin_padding_35"
                android:layout_marginRight="@dimen/margin_padding_35"
                android:layout_marginTop="@dimen/margin_padding_30"
                android:layout_marginBottom="@dimen/margin_padding_30"
                android:background="@drawable/btn_login">

                <com.example.admin.club.custom.view.MyCusttomtext
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/save_info"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>