<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment"
    android:orientation="vertical">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="@drawable/bg_color" />

    <RelativeLayout
        android:id="@+id/menu_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_50"
        android:background="@drawable/bg_color"
        android:layout_below="@+id/view1">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_padding_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_padding_25"
            android:layout_marginLeft="@dimen/margin_padding_25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_regis"
                android:text="@string/note_change_pass"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_padding_25"
                android:textStyle="italic"/>

            <TextView
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_phone_use_acc" />

            <EditText
                android:id="@+id/txt_number_phone"
                style="@style/enter_edittext"
                android:hint="@string/enter_number_phone"
                android:inputType="number" />

            <TextView
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_name" />

            <EditText
                android:id="@+id/txt_old_password"
                style="@style/enter_edittext"
                android:hint="@string/enter_new_password"
                android:inputType="number" />

            <TextView
                style="@style/txt_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_name" />

            <EditText
                android:id="@+id/txt_new_password"
                style="@style/enter_edittext"
                android:hint="@string/enter_old_password"
                android:inputType="number" />

            <RelativeLayout
                android:id="@+id/btn_forgot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_60"
                android:layout_marginLeft="@dimen/margin_padding_15"
                android:layout_marginRight="@dimen/margin_padding_15"
                android:layout_marginTop="@dimen/margin_padding_30"
                android:layout_marginBottom="@dimen/margin_padding_30"
                android:background="@drawable/btn_login">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/change_password_title"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>