<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <RelativeLayout
        android:id="@+id/menu_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_50"
        android:background="@drawable/bg_color">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_infor_detail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/btn_close"
            android:layout_width="@dimen/margin_padding_40"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_x"
                android:src="@drawable/ic_close" />

        </android.support.v7.widget.LinearLayoutCompat>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/view_detail_register_seria"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_50"
                android:background="@drawable/bg_color">

                <TextView
                    android:id="@+id/txt_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/detail_register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:textStyle="bold" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/btn_close_2"
                    android:layout_width="@dimen/margin_padding_40"
                    android:layout_height="@dimen/margin_padding_40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_x"
                        android:src="@drawable/ic_close" />
                </android.support.v7.widget.LinearLayoutCompat>

            </RelativeLayout>

            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_product"
                android:visibility="gone" />

            <TextView
                style="@style/txt_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_product" />

            <TextView
                android:id="@+id/txt_code_product"
                style="@style/txt_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_seria" />

            <TextView
                android:id="@+id/txt_number_seria"
                style="@style/txt_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_reward" />

            <TextView
                android:id="@+id/code_reward"
                style="@style/txt_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_register_seria"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_date_register"
                style="@style/txt_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


            <TextView
                style="@style/txt_title_detail_regiter_seria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sores"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/margin_padding_15"
                    android:layout_height="@dimen/margin_padding_15"
                    android:layout_marginLeft="@dimen/margin_padding_15"
                    android:layout_marginTop="@dimen/margin_padding_5"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/txt_scores"
                    style="@style/txt_detail_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_padding_5" />


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>